# starforge

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  test_all_models_temp_top_p.py  test_gemini_sse.py  test_nvidia_api.py  test_temp_top_p.py
assistant/: __init__.py  chat_engine.py  cli_format.py  functions_registry.py  json_repair_min.py  logging_config.py  memory.py  model.py  prompt.py  refactor_shadowing.py  scan_smells.py  server.py  tool_calls.py  tools.py  utils.py  web.py  workspace_tools.py
examples/: code_debugging.py  crypto_research.py
finetune/: build_full_tool_dataset.py  build_function_dataset.py  function_creation_tool_use.jsonl  generate_synthetic_tool_use.py  requirements-train.txt  run_full_finetune.sh  synthetic_tool_use.jsonl  tool_use_seed.jsonl  train_function_tools.jsonl  train_lora_sft.py  val_tool_use_full.jsonl
functions/: execute_terminal_command.json  execute_terminal_command.py  request_file_upload.json  request_file_upload.py  terminal_session.json  terminal_session.py
memory/: tool_finetune_samples.jsonl  tool_supervision.jsonl
starforge/: __init__.py  actions.py  adapters.py  cli.py  context.py  engine.py  memory.py  observations.py
starforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_all_models_temp_top_p.py  test_code_intelligence.py  test_memory.py  test_nvidia_api.py  test_skills.py  test_starforge_cli.py  test_starforge_runtime.py  test_structured_planner.py  test_temp_top_p.py  test_tool_calls.py  test_tool_reliability.py  (+2 more)
(+31 files in other folders)
